<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cadastro"
    android:orientation="vertical">


    <TextView
        android:id="@+id/titulo"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:text="@string/cadastre_uma_arvore"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="30sp">
    </TextView>

    <!-- No Futuro mudar pra um List View com Busca-->
    <Spinner
        android:id="@+id/tipo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:entries= "@array/labels_tipos"
        android:prompt= "@string/tipo_de_arvore"
        android:textAlignment="center"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/acesso"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"        android:text="@string/acesso"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="#000000"
        />
    <RatingBar
        android:id="@+id/R_acesso"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"        android:layout_marginTop="240dp"
        android:isIndicator="false"
        android:numStars="5"
        android:scaleX="2"
        android:scaleY="2"
        android:stepSize="0.3" />

    <TextView
        android:id="@+id/quali_fruta"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="290dp"
        android:layout_centerHorizontal="true"        android:text="@string/qualidade_da_fruta"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="#000000"
        />
    <RatingBar
        android:id="@+id/R_quali_fruta"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"        android:layout_marginTop="330dp"
        android:isIndicator="false"
        android:numStars="5"
        android:scaleX="2"
        android:scaleY="2"
        android:stepSize="0.3" />

    <TextView
        android:id="@+id/quant_fruta"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="370dp"
        android:layout_centerHorizontal="true"        android:text="@string/quantidade_de_frutas"
        android:textSize="18sp"
        android:textColor="#000000"
        android:textAlignment="center"
        />
    <RatingBar
        android:id="@+id/R_quant_fruta"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"        android:layout_marginTop="410dp"
        android:isIndicator="false"
        android:numStars="5"
        android:scaleX="2"
        android:scaleY="2"
        android:stepSize="0.3" />

    <EditText
        android:id="@+id/extra"
        android:inputType="textAutoComplete"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="480dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/comentario_extra"
        android:textAlignment="center"
        android:textSize="26sp"
        android:autofillHints="As melhores frutas estao nos galhos mais a eaquerda" />

    <Button
        android:id="@+id/localizacao"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="570dp"
        android:layout_centerHorizontal="true"
        android:text="@string/cadastrar"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:background="#4875B4" />


</RelativeLayout>